deps/v8/test/message/regress/fail/regress-9603.out
# Copyright 2019 the V8 project authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
*%(basename)s:5: SyntaxError: Invalid or unexpected token
let x = 09_9.0;
          ^
SyntaxError: Invalid or unexpected token
